--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         of the puzzle?
                     </p>
                     <a href="https://gyride.github.io/SlidingPuzzle/">View</a>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Ei-sc-github.svg/768px-Ei-sc-github.svg.png" alt="Github">
+                    <a href="https://github.com/Gyride/SlidingPuzzle"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Ei-sc-github.svg/768px-Ei-sc-github.svg.png" alt="Github"></a>
                 </div>
                 <nav>
                     <ul>
@@ -97,7 +97,7 @@
                     <span>Javascript Application</span>
                     <p>A classic game of Solitaire.</p>
                     <a href="https://gyride.github.io/Solitaire/">View</a>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Ei-sc-github.svg/768px-Ei-sc-github.svg.png" alt="Github">
+                    <a href="https://github.com/Gyride/Solitaire"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Ei-sc-github.svg/768px-Ei-sc-github.svg.png" alt="Github"></a>
                 </div>
                 <nav>
                     <ul>
