--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         of the puzzle from a 3x3 to a 5x5! Can you solve all the sizes 
                         of the puzzle?
                     </p>
-                    <a href="https://gyride.github.io/SlidingPuzzle/">View</a>
+                    <a id="code" href="https://gyride.github.io/SlidingPuzzle/">View</a>
                     <a href="https://github.com/Gyride/SlidingPuzzle"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Ei-sc-github.svg/768px-Ei-sc-github.svg.png" alt="Github"></a>
                 </div>
                 <nav>
@@ -96,7 +96,7 @@
                     <h2>Solitaire</h2>
                     <span>Javascript Application</span>
                     <p>A classic game of Solitaire.</p>
-                    <a href="https://gyride.github.io/Solitaire/">View</a>
+                    <a id="code" href="https://gyride.github.io/Solitaire/">View</a>
                     <a href="https://github.com/Gyride/Solitaire"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Ei-sc-github.svg/768px-Ei-sc-github.svg.png" alt="Github"></a>
                 </div>
                 <nav>
