--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@
                 <div class="desc">
                     <h2>Solitaire</h2>
                     <span>Javascript Application</span>
-                    <p>A classic game of Solitaire.</p>
+                    <p>This app plays like a regular game of Solitaire. I built this app 
+                        with the data method in combination with the jquery ui library. I 
+                        used the data method to attach a card object to every card element. 
+                        The logic of where a card or stack of cards can be placed is done 
+                        along with the jquery ui library.
+                    </p>
                     <a target="_blank" id="code" href="http://sebastianjaramillo.me/Solitaire/">View</a>
                     <a target="_blank" href="https://github.com/Gyride/Solitaire"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Ei-sc-github.svg/768px-Ei-sc-github.svg.png" alt="Github"></a>
                 </div>
