--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                         <line x1="96" y1="20" x2="176" y2="20" style="stroke:rgb(0,0,0);stroke-width:2" />
                     </svg>
                     <a id="email" href="mailto:sebast.jar@gmail.com">Sebast.Jar@gmail.com</a>
-                    <a href="https://github.com/Gyride">GITHUB</a>
-                    <a id="middle" href="https://www.linkedin.com/in/s-jaramillo/">LINKEDIN</a>
-                    <a href="https://twitter.com/SebastJar">TWITTER</a>
+                    <a target="_blank" href="https://github.com/Gyride">GITHUB</a>
+                    <a target="_blank" id="middle" href="https://www.linkedin.com/in/s-jaramillo/">LINKEDIN</a>
+                    <a target="_blank" href="https://twitter.com/SebastJar">TWITTER</a>
                 </div>
                 <a id="resume" href="Jaramillo_Sebastian" download>
                     <span>Download Resume</span>
