--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <a target="_blank" id="middle" href="https://www.linkedin.com/in/s-jaramillo/">LINKEDIN</a>
                     <a target="_blank" href="https://twitter.com/SebastJar">TWITTER</a>
                 </div>
-                <a id="resume" href="Jaramillo_Sebastian" download>
+                <a id="resume" href="Jaramillo_Sebastian.pdf" download>
                     <span>Download Resume</span>
                     <svg width="21" height="20" viewBox="0 0 21 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <title>Vector</title>
